fix misalignement of category in refine in japanese

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2161,6 +2161,9 @@ table.multiple-upload {
 html[lang="ja-jp"] .form-refine span.spacing {
     vertical-align: middle;
 }
+html[lang="ja-jp"] .form-input.refine-category {
+    vertical-align: top;	
+}
 @media (max-width: 1100px) {
     html[lang="ja-jp"] .header .h-user>.nav-btn {
         font-size: 75%;
